# markora

./: .gitignore  .release-it.json  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/: _config.yml  index.html  manual-release-signing.md  markora-web-capabilities.md  privacy.html  privacy.md  robots.txt  sitemap.xml  versions.html
docs/legal/: privacy-policy.md
docs/plans/: 2026-03-27-markora-fluent-tab-strip-design.md  2026-03-27-markora-fluent-tab-strip-implementation.md  2026-03-27-markora-notepad-markdown-shell-implementation.md  2026-03-27-markora-precision-dark-design.md  2026-03-27-markora-precision-dark-implementation.md  2026-03-27-markora-settings-design.md  2026-03-27-markora-settings-implementation.md  2026-03-27-markora-toolbar-redesign-design.md  2026-03-27-markora-toolbar-redesign-implementation.md  2026-03-27-markora-ui-refresh-design.md  2026-03-27-markora-ui-refresh-implementation.md  2026-03-27-markora-ui-review-followup.md  2026-03-27-tailwind-v4-migration-design.md  2026-03-27-tailwind-v4-migration-implementation.md  2026-03-28-markora-shared-components-refactor-todo.md  (+9 more)
public/: site.webmanifest
scripts/: publish-signed-release.ps1
src/: App.test.tsx  App.tsx  App.web.test.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file.rs  markdown.rs  mod.rs  settings.rs
src/components/: Editor.test.tsx  (+7 more)
(+176 files in other folders)
